# bevy_mod_min_repro

./: Cargo.toml  readme.md  rust-toolchain.toml
assets/: startup.lua  test1.lua
src/: main.rs
